@@ -1,3 +1,10 @@
+2002-02-04  John Levon  <moz@compsoc.man.ac.uk>
+
+	* dae/oprofiled.h:
+	* dae/oprofiled.c:
+	* dae/opd_proc.c: free stuff on shutdown (to
+	  clean dmalloc reports)
+ 
 2002-02-03  John Levon  <moz@compsoc.man.ac.uk>
 
 	* configure.in: bump to 0.1
